--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
       {%- endif -%}
      </p>
-     <p>Time to read : <strong>{{ content | reading_time_as_i }}</strong></p>
+     <!--p>Time to read : <strong>{{ content | reading_time_as_i }}</strong></p-->
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
